--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ DB_ENGINE=django.db.backends.postgresql
 DB_NAME=test_students
 DB_HOST=localhost
 DB_PORT=5432
-DB_PASSWORD=ozevol18
-DB_USER=postgres
+DB_PASSWORD=password
+DB_USER=user
 DATABASE=postgres
