--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ SECRET_KEY=django-insecure-nw^y+m^wmxza1asgk+)!ua2qx9)g+#v=6%76-9i8i(6eqiw94j
 DEBUG=True
 DB_ENGINE=django.db.backends.postgresql
 DB_NAME=test_students
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_PASSWORD=password
-DB_USER=user
+DB_PASSWORD=ozevol18
+DB_USER=postgres
 DATABASE=postgres
