--- a/.env
+++ b/.env
@@ -1,12 +1,10 @@
 SECRET_KEY=django-insecure-nw^y+m^wmxza1asgk+)!ua2qx9)g+#v=6%76-9i8i(6eqiw94j
 DEBUG=True
-DB_ENGINE=django.db.backends.sqlite3
+DB_ENGINE=django.db.backends.postgresql
 DB_NAME=test_students
-#DB_ENGINE=django.db.backends.postgresql
-#DB_NAME=test_students
-#DB_HOST=localhost
-#DB_PORT=5432
-#DB_PASSWORD=ozevol18
-#DB_USER=postgres
+DB_HOST=localhost
+DB_PORT=5432
+DB_PASSWORD=password
+DB_USER=user
 ALLOWED_HOSTS=127.0.0.1,localhost,0.0.0.0
 DATABASE=postgres
