--- a/.env
+++ b/.env
@@ -8,5 +8,5 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_PASSWORD=ozevol18
 DB_USER=postgres
-ALLOWED_HOSTS=127.0.0.1,localhost,0.0.0.0
+ALLOWED_HOSTS=127.0.0.1,localhost,0.0.0.0,heroku
 DATABASE=postgres
